<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
					  http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- The Basics -->
  <groupId>io.github.css4j</groupId>
  <artifactId>integration</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <properties>
	<css4j.version>5.3.1</css4j.version>
	<css4jDom4j.version>5.3</css4jDom4j.version>
	<slf4j.version>2.0.16</slf4j.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.13.2</version>
		<type>jar</type>
		<scope>test</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>carte-util</artifactId>
		<version>3.6.0</version>
		<type>jar</type>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>xml-dtd</artifactId>
		<version>4.3</version>
		<type>jar</type>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>css4j</artifactId>
		<version>${css4j.version}</version>
		<type>jar</type>
		<scope>compile</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>css4j-agent</artifactId>
		<version>5.3</version>
		<type>jar</type>
		<scope>compile</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>css4j</artifactId>
		<version>${css4j.version}</version>
		<type>test-jar</type>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>css4j-dom4j</artifactId>
		<version>${css4jDom4j.version}</version>
		<type>jar</type>
		<scope>test</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>io.sf.carte</groupId>
		<artifactId>css4j-dom4j</artifactId>
		<version>${css4jDom4j.version}</version>
		<type>test-jar</type>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>[1.10,)</version>
		<scope>compile</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${slf4j.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-simple</artifactId>
		<version>${slf4j.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>nu.validator</groupId>
		<artifactId>htmlparser</artifactId>
		<version>1.4.16</version>
		<scope>compile</scope>
		<optional>false</optional>
	</dependency>
	<dependency>
		<groupId>xmlpull</groupId>
		<artifactId>xmlpull</artifactId>
		<version>1.2.0</version>
		<scope>runtime</scope>
		<optional>true</optional>
	</dependency>
  </dependencies>
  <!-- Configure CSS4J repository -->
  <repositories>
	<repository>
		<id>css4j</id>
		<name>CSS4J repository</name>
		<url>https://css4j.github.io/maven/</url>
	</repository>
  </repositories>
  <!-- Build Settings -->
  <build>
	<defaultGoal>clean package</defaultGoal>
	<directory>${project.basedir}/build</directory>
	<outputDirectory>${project.build.directory}/bin</outputDirectory>
	<finalName>${project.artifactId}-${project.version}</finalName>
	<testOutputDirectory>${project.build.directory}/testbin</testOutputDirectory>
	<sourceDirectory>${project.basedir}/src</sourceDirectory>
	<testSourceDirectory>${project.basedir}/junit</testSourceDirectory>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>3.3.0</version>
			<executions>
				<execution>
					<id>attach-sources</id>
					<goals>
						<goal>jar-no-fork</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.12.1</version>
			<configuration>
			  <source>1.8</source>
			  <target>1.8</target>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>3.6.3</version>
			<configuration>
				<source>8</source>
				<quiet>true</quiet>
			</configuration>
			<executions>
				<execution>
					<id>attach-javadocs</id>
					<goals>
						<goal>jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>3.3.0</version>
			<configuration>
			<archive>
				<addMavenDescriptor>false</addMavenDescriptor>
			</archive>
			</configuration>
			<executions>
				<execution>
				  <goals>
					<goal>test-jar</goal>
				  </goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>build-helper-maven-plugin</artifactId>
			<version>3.5.0</version>
			<executions>
				<execution>
					<id>add-test-source</id>
					<phase>generate-test-sources</phase>
					<goals>
						<goal>add-test-source</goal>
					</goals>
					<configuration>
						<sources>
							<source>${project.basedir}/ci</source>
						</sources>
					</configuration>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.3</version>
			<configuration>
				<additionalClasspathElements>
					<additionalClasspathElement>${project.basedir}/ci</additionalClasspathElement>
				</additionalClasspathElements>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-failsafe-plugin</artifactId>
			<version>3.2.3</version>
			<configuration>
				<forkCount>4</forkCount>
				<reuseForks>true</reuseForks>
				<argLine>-Dfile.encoding=${project.build.sourceEncoding} -Xmx2048m</argLine>
				<additionalClasspathElements>
					<additionalClasspathElement>${project.basedir}/ci</additionalClasspathElement>
					<argLine>-Xmx1g</argLine>
				</additionalClasspathElements>
			</configuration>
			<executions>
				<execution>
					<goals>
						<goal>integration-test</goal>
						<goal>verify</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
	</plugins>
	<resources>
		<resource>
			<directory>${project.basedir}</directory>
			<includes>
				<include>LICENSE.txt</include>
			</includes>
		</resource>
	</resources>
	<testResources>
		<testResource>
			<directory>${project.basedir}/ci</directory>
			<excludes>
				<exclude>**/*.java</exclude>
			</excludes>
		</testResource>
	</testResources>
  </build>
</project>
